--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongodb": "^4.10.0",
+    "mongoose": "^6.7.2",
     "node": "^18.9.1",
     "pug": "^3.0.2"
   }
