--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "startdev": "nodemon app",
-    "start": "node app"
+    "start": "node app",
+    "build": "NODE_ENV=production postcss static/main.css -o static/styles.css",
+    "dev": "postcss static/main.css -o static/styles.css -w"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,12 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.7.2",
     "node": "^18.9.1",
+    "postcss-cli": "^10.1.0",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
